syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "LibraryManagement.Protobuf";

service Book {
	rpc GetBook (GetBookRequest) returns (GetBookResponse);
	rpc GetAllBooks (google.protobuf.Empty) returns (GetAllBooksResponse);
	rpc AddBook (AddBookRequest) returns (AddBookResponse);
	rpc RemoveBook (RemoveBookRequest) returns (RemoveBookResponse);
}

message AddBookRequest {
	string name = 1;
	int32 author_Id = 2;
}

message AddBookResponse {
	int32 Id = 1;
}

message GetBookRequest {
	int32 Id = 1;
}

message GetBookResponse {
	int32 Id = 1;
	string name = 2;
	int32 author_Id = 3;
}

message GetAllBooksResponse {
    repeated GetBookResponse get_Book_Response = 1;
}

message RemoveBookRequest {
    int32 Id = 1;
}

message RemoveBookResponse {
    bool deleted = 1;
}